Se agrego accesibilidad y se mejoro el sidebar